<resources>
    <string name="app_name">UTSAndroid-PemAndroid3-10121076-FaliqZuldanAkbar</string>
    <string name="form_pengisian">Form Pengisian Data</string>
    <string name="jenis_tes">Jenis Tes</string>
    <string name="nik">NIK</string>
    <string name="rapid">Rapid Antigen</string>
    <string name="pcr">PCR</string>
    <string name="harus_diisi">- Harus Diisi</string>
    <string name="tanggal">Tanggal Terkonfirmasi</string>
    <string name="nama">Nama</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="hubungan">Hubungan Dengan Anda</string>
    <string name="suami_istri">Suami/Istri</string>
    <string name="anak">Anak</string>
    <string name="kerabat">Kerabat Lainnya</string>
    <string name="orang_tua">Orang Tua</string>
    <string name="syarat">dengan ini saya menyutujui bahwa data yang saya isikan adalah
    benar</string>
    <string name="cek">Cek Kembali Isiian Data</string>
    <string name="next">Next</string>
</resources>